# network-scanner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build-deb.sh  build.sh  init-git.sh  resources.qrc
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
assets/: network-scanner.desktop
debian/: changelog  control  copyright  rules
src/: deviceinfo.h  ipscanner.cpp  ipscanner.h  ipscannerthread.cpp  ipscannerthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scannermodel.cpp  scannermodel.h
